// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs multiple outputs snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { TerraformOutput, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new TerraformOutput(this, "first_cidr_out", {
      value: "first",
    });
    new TerraformOutput(this, "second_cidr_out", {
      value: "second",
    });
  }
}
"
`;

exports[`outputs number output snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { TerraformOutput, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new TerraformOutput(this, "test", {
      value: 42,
    });
  }
}
"
`;

exports[`outputs output snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { TerraformOutput, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new TerraformOutput(this, "cidr_out", {
      value: "test",
    });
  }
}
"
`;

exports[`outputs output withdescription snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { TerraformOutput, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new TerraformOutput(this, "cidr_out", {
      value: "test",
      description: "Best output",
      sensitive: true,
    });
  }
}
"
`;

exports[`outputs sensitive output snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { TerraformOutput, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new TerraformOutput(this, "cidr_out", {
      value: "test",
      sensitive: true,
    });
  }
}
"
`;
